@@ -1,3 +1,8 @@
+2008-10-15  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/LegendItem.java
+    (LegendItem(String, Paint)): New constructor.
+
 2008-10-08  David Gilbert  <david.gilbert@object-refinery.com>
 
     Incorporating patch 2131001:
